<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:title="@string/dash"
        android:id="@+id/option_dashboard"
        app:showAsAction="never"
        />
    <item
        android:title="@string/energy"
        android:id="@+id/option_energy_reporting"
        app:showAsAction="never"
        />
    <item
        android:title="@string/powerAnalysis"
        android:id="@+id/option_power_analysis_report"
        app:showAsAction="never"
       />
    <item
        android:title="@string/powerGraphs"
        android:id="@+id/option_power_graphs"
        app:showAsAction="never"
        />
    <item
        android:title="@string/userDetails"
        android:id="@+id/option_user_details"
        app:showAsAction="never"
        />
    </menu>